--- a/flapper-news/views/index.ejs
+++ b/flapper-news/views/index.ejs
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>My Angular App!</title>
+    <link href = "http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
     <script src="/javascripts/angularApp.js"></script>
@@ -8,18 +9,30 @@
   <body ng-app="flapperNews" ng-controller="MainCtrl">
     <ui-view></ui-view>
     <div ng-repeat="post in posts | orderBy: 'upvotes'">
-      <span ng-click="incrementUpvotes()">^</span>
-      {{post.title}} upvotes : {{post.upvotes}}
+      <span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes()"></span>
+        {{post.upvotes}}
+       <a ng-show= "post.link" href="{{post.link}}">
+         {{post.title}}
+       </a>
+       <span ng-hide="post.link">
+         {{post.title}}
+       </span>
     </div>
-   <form ng-submit="addPost()">
-    <input type="text" ng-model="title"></input>
-    <button type="submit">Post</button>
+   <form ng-submit = "addPost()">
+    <h3>Add a New Post</h3>
+    <div class = "form-group">
+      <input type="text" class = "form-control" placeholder = "Title" ng-model="title"></input>
+    </div>
+    <div class = "form-group">
+      <input type="text" class = "form-control" placeholder = "Link" ng-model="link"></input>
+    </div>
+    <button type = "submit" class="btn btn-primary">Post</button>
   </form>
   <script type="text/ng-template" id="/home.html">
-  <div class="page-header">
-    <h1>Flapper News</h1>
-  </div>
+    <div class="page-header">
+      <h1>Flapper News</h1>
+    </div>
   <!-- rest of template -->
-</script>
+  </script>
   </body>
 </html>
